// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing Matches snapshot for Gutter 1`] = `
<div
  className="p-1 md:p-2 lg:p-3"
/>
`;

exports[`Spacing Matches snapshot for GutterBottom 1`] = `
<div
  className="mb-4"
/>
`;

exports[`Spacing Matches snapshot for GutterOffset 1`] = `
<div
  className="-mx-1 md:-mx-2 lg:-mx-3"
/>
`;

exports[`Spacing Matches snapshot for GutterTop 1`] = `
<div
  className="mt-4"
/>
`;

exports[`Spacing Matches snapshot for GuttonLeft 1`] = `
<div
  className="ml-4"
/>
`;

exports[`Spacing Matches snapshot for GuttonRight 1`] = `
<div
  className="mr-4"
/>
`;

exports[`Spacing Matches snapshot for MarginBottomLarge 1`] = `
<div
  className="mb-24px md:mb-36px"
/>
`;

exports[`Spacing Matches snapshot for MarginBottomMedium 1`] = `
<div
  className="mb-20px md:mb-24px"
/>
`;

exports[`Spacing Matches snapshot for MarginBottomSmall 1`] = `
<div
  className="mb-16px md:mb-20px"
/>
`;

exports[`Spacing Matches snapshot for MarginBottomXLarge 1`] = `
<div
  className="mb-36px md:mb-48px"
/>
`;

exports[`Spacing Matches snapshot for MarginBottomXSmall 1`] = `
<div
  className="mb-8px md:mb-16px"
/>
`;

exports[`Spacing Matches snapshot for MarginLarge 1`] = `
<div
  className="m-24px md:m-36px"
/>
`;

exports[`Spacing Matches snapshot for MarginLeftMedium 1`] = `
<div
  className="ml-20px md:ml-24px"
/>
`;

exports[`Spacing Matches snapshot for MarginMedium 1`] = `
<div
  className="m-20px md:m-24px"
/>
`;

exports[`Spacing Matches snapshot for MarginRightMedium 1`] = `
<div
  className="mr-20px md:mr-24px"
/>
`;

exports[`Spacing Matches snapshot for MarginSmall 1`] = `
<div
  className="m-16px md:m-20px"
/>
`;

exports[`Spacing Matches snapshot for MarginTopLarge 1`] = `
<div
  className="mt-24px md:mt-36px"
/>
`;

exports[`Spacing Matches snapshot for MarginTopMedium 1`] = `
<div
  className="mt-20px md:mt-24px"
/>
`;

exports[`Spacing Matches snapshot for MarginTopSmall 1`] = `
<div
  className="mt-16px md:mt-20px"
/>
`;

exports[`Spacing Matches snapshot for MarginTopXLarge 1`] = `
<div
  className="mt-36px md:mt-48px"
/>
`;

exports[`Spacing Matches snapshot for MarginTopXSmall 1`] = `
<div
  className="mt-8px md:mt-16px"
/>
`;

exports[`Spacing Matches snapshot for MarginXLarge 1`] = `
<div
  className="m-36px md:m-48px"
/>
`;

exports[`Spacing Matches snapshot for MarginXSmall 1`] = `
<div
  className="m-8px md:m-16px"
/>
`;

exports[`Spacing Matches snapshot for MarginYXSmall 1`] = `
<div
  className="my-8px md:my-16px"
/>
`;

exports[`Spacing Matches snapshot for PaddingBottomLarge 1`] = `
<div
  className="pb-24px md:pb-36px"
/>
`;

exports[`Spacing Matches snapshot for PaddingBottomMedium 1`] = `
<div
  className="pb-20px md:pb-24px"
/>
`;

exports[`Spacing Matches snapshot for PaddingBottomSmall 1`] = `
<div
  className="pb-16px md:pb-20px"
/>
`;

exports[`Spacing Matches snapshot for PaddingBottomXLarge 1`] = `
<div
  className="pb-36px md:pb-48px"
/>
`;

exports[`Spacing Matches snapshot for PaddingBottomXSmall 1`] = `
<div
  className="pb-8px md:pb-16px"
/>
`;

exports[`Spacing Matches snapshot for PaddingLarge 1`] = `
<div
  className="p-24px md:p-36px"
/>
`;

exports[`Spacing Matches snapshot for PaddingMedium 1`] = `
<div
  className="p-20px md:p-24px"
/>
`;

exports[`Spacing Matches snapshot for PaddingSmall 1`] = `
<div
  className="p-16px md:p-20px"
/>
`;

exports[`Spacing Matches snapshot for PaddingTopMedium 1`] = `
<div
  className="pt-20px md:pt-24px"
/>
`;

exports[`Spacing Matches snapshot for PaddingTopSmall 1`] = `
<div
  className="pt-16px md:pt-20px"
/>
`;

exports[`Spacing Matches snapshot for PaddingXLarge 1`] = `
<div
  className="p-36px md:p-48px"
/>
`;

exports[`Spacing Matches snapshot for PaddingXSmall 1`] = `
<div
  className="p-8px md:p-16px"
/>
`;

exports[`Spacing Matches snapshot for PaddingYXSmall 1`] = `
<div
  className="py-8px md:py-16px"
/>
`;

exports[`Spacing Matches snapshot for WithSiteMargin 1`] = `
<div
  className="mx-2 xl:mx-6 xxl:px-20"
/>
`;

exports[`Spacing Matches snapshot for WithSiteXLConstraint 1`] = `
<div
  className="xxl:container xxl:mx-auto"
/>
`;
